fixed stretched photos on archive page

--- a/css/archive.css
+++ b/css/archive.css
@@ -79,7 +79,7 @@ a:hover {
 .mchild img {
 	max-height: 100%;
 	min-width: 100%;
-	/* object-fit: cover; */
+	object-fit: cover;
 	vertical-align: bottom;
 	transition: all 0.5s ease;
 }
